# project-uploader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  design.md  pyproject.toml
app/: main.py
tests/: test_main.py
