[tool.isort]
profile = "black"
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
lines_before_imports = 0
include_trailing_comma = true
color_output = true

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "__init__.py:F401"
]

[tool.poetry]
name = "svc-example"
version = "0.1.0"
description = "Example fastapi service"
authors = ["Strange Devs <hello@strangeworks.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
sw-product-lib = "^0.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.1.0"
Flake8-pyproject = "^1.1.0"
mdformat = "^0.7.14"
mdformat-black = "^0.1.1"
pytest = "^7.0.1"
pre-commit = "^2.20.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--disable-warnings"
testpaths = [
    "tests",
]
